--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,9 +5,17 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: #242259;
 }
-
+nav{
+    background-color: #124a7e;
+}
+nav a{
+    color: #1f84c9;
+}
+nav a:hover{
+    color: #20b5d8;
+}
 header {
     width: 100%;
     height: 100vh;
@@ -20,4 +28,31 @@ canvas {
     height: 100vh;
     z-index: -2;
     position: absolute;
+}
+#vantagens{
+    background-image: url(../img/vantagens.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+i{
+    color: greenyellow;
+    background-color: black;
+    border-radius: 50%;
+    padding: 10px;
+}
+ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+li{
+    list-style: none;
+}
+#sobrenos{
+    background-color: #1A1840;
+    color: #4E55D9;
 }
